fix(gateway): resolve ReactiveJwtDecoder requirement and add robust standalone routes and CORS for cloud deployment